[gd_scene load_steps=7 format=3 uid="uid://bgb536ilpkcd4"]

[ext_resource type="Script" uid="uid://qn3jiemebqp7" path="res://Levels/item_pedestal.gd" id="1_hybfd"]
[ext_resource type="Texture2D" uid="uid://dg5lestagdwls" path="res://Assets/Store/pedestal.png" id="2_hybfd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hybfd"]
size = Vector2(106, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdb43"]
size = Vector2(44, 124)

[sub_resource type="LabelSettings" id="LabelSettings_hybfd"]
font_size = 30
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tfthc"]
font_size = 25
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="ItemPedestal" type="Node2D"]
script = ExtResource("1_hybfd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hybfd")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(-1, -21)
shape = SubResource("RectangleShape2D_hybfd")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(-1, 52)
shape = SubResource("RectangleShape2D_sdb43")

[node name="PurchaseLabel" type="Label" parent="PlayerDetector"]
visible = false
offset_left = -28.0
offset_top = -207.0
offset_right = 28.0
offset_bottom = -120.0
text = "00G
"
label_settings = SubResource("LabelSettings_hybfd")
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="PlayerDetector"]
visible = false
custom_minimum_size = Vector2(400, 0)
offset_left = -195.0
offset_top = -166.0
offset_right = 205.0
offset_bottom = -79.0
text = "Item Description, but a very long description that maybe goes on for too long."
label_settings = SubResource("LabelSettings_tfthc")
horizontal_alignment = 1
autowrap_mode = 3

[node name="ItemContainer" type="Node2D" parent="."]
position = Vector2(0, -33)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
